Ajouter fichier index.html pour tester branche-test-01

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="bloc_presentation">
             <h1>Test Git / Github</h1>
             <p>Come back soon... :)</p>
+            <p>Test paragraphe pour test branche branche-test-01</p>
         </div>
     </body>
 </html>
