Ajouter un 2ème paragraphe au fichier index.html pour tester la branche expérimentale branche-test-01

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h1>Test Git / Github</h1>
             <p>Come back soon... :)</p>
             <p>Test paragraphe pour test branche branche-test-01</p>
+            <p>Test paragraphe 2 pour test branche branche-test-01</p>
         </div>
     </body>
 </html>
